# Navis

./: .eslintrc.cjs  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  start.md  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  SECURITY.md  THREATS.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: autolock.rs  errors.rs  ids.rs  keychain.rs  mod.rs  paths.rs  policy.rs  registry.rs  state.rs  vault.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/ipc/commands/: hostkeys.rs  mod.rs  registry.rs  sessions.rs  sftp.rs  vault.rs
src-tauri/src/protocols/: hostkeys.rs  mod.rs  rdp.rs  session.rs  sftp.rs  ssh.rs
src/features/connections/: ConnectionEditor.tsx  editor.css
src/features/credentials/: CredentialsPanel.tsx  credentials.css
src/features/sessions/: SessionTabs.tsx  SftpBrowser.tsx  TerminalView.tsx  sessions.css  sftp.css
src/features/tree/: ConnectionTree.tsx  tree.css
src/features/trust/: TrustStorePanel.tsx
src/features/vault/: VaultGate.tsx  vault.css
src/ipc/: client.ts  types.ts
src/layout/: Shell.tsx  shell.css
src/store/: app.ts
src/styles/: globals.css
