[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TheEvalon/Navis"
authors = ["Navis contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"

# Errors / logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
base64 = "0.22"

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Keychain
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }

# SSH / SFTP (Phase 3 / 4)
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.1"

# Misc
once_cell = "1.20"
parking_lot = "0.12"
directories = "5.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
